# leishgemlopit

./: .gitignore  README.md  pyproject.toml
src/leishgemlopit/: analysis.py  constants.py  lopit.py  markers.py  supervised.py  tryptag.py  tsne.py  unsupervised.py  utils.py
src/leishgemlopit/__assets__/: brucei.mitoribo.txt  brucei.ribo.txt  component_colors.json  leishmania_mexicana_additional_markers.csv  lmex.golgi.txt  lmex.pocket.txt  lmex.ribo.txt  rcolors.json  trypTag_signal_quantification.json  trypanosoma_cruzi_additional_markers.csv
